examples/test/testpolicy1098.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1098
  namespace: namespace54
spec:
  podSelector:
    matchLabels:
      key44: value23
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key9: value34
          key18: value24
      podSelector:
        matchLabels:
          key42: value0
          key27: value10
          key4: value20
